--- a/src/index.css
+++ b/src/index.css
@@ -144,9 +144,9 @@ table {
     color: #242424;
     background-color: #ffffff;
   }
-  a:hover {
+  /* a:hover {
     color: #747bff;
-  }
+  } */ 
   button {
     background-color: #f9f9f9;
   }
