--- a/src/index.css
+++ b/src/index.css
@@ -163,14 +163,14 @@ th,
 td {
   padding: 15px;
   background-color: rgba(255, 255, 255, 0.2);
-  color: #fff;
+  /* color: #fff; */
 }
 th {
   text-align: left;
 }
-thead th {
+/* thead th {
   background-color: #55608f;
-}
+} */
 tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
